frameworks/gin-web/kubernetes/k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gin-web
  labels:
    app: gin-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gin-web
  template:
    metadata:
      # labels to select/identify the deployment
      labels:
        app: gin-web
        tier: service
    spec:
      containers:
      - name: gin-web
        image: "vkraken/gin-web:1.0.2"
        ports:
        - containerPort: 9090
        resources:
          requests:
            memory: "64Mi"
            cpu: "125m"
          limits:
            memory: "128Mi"
            cpu: "250m"
        
        # check of gin-web is alive and healthy
        readinessProbe:
          httpGet:
            path: /ping
            port: 9090
          initialDelaySeconds: 5
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /ping
            port: 9090
          initialDelaySeconds: 5
          timeoutSeconds: 5
