frameworks/gin-web/kubernetes/k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gin-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: gin-web.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gin-web
                port:
                  number: 9090
